--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                                    <img src="img/SCREEN1.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -106,7 +106,7 @@
                     <h2 class="section-heading"> Not all who wander are lost!</h3>
                     <p> Find your next best friend! Sign up for our beta! </p>
                     <div class="badges">
-                       <form action="https://formspree.io/your@email.com"
+                       <form action="https://formspree.io/foolsyries@gmail.com"
       method="POST">
     <input type="text" name="name">
     <input type="email" name="_replyto">
@@ -136,7 +136,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                    <img src="img/SCREEN1.png" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -149,32 +149,32 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <i class="fa fa-book text-primary"></i>
+                                    <h3>Hostel Housemates</h3>
+                                    <p class="text-muted"> Connect with people hostels and hotels throughout SF. </p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <i class="fa fa-star-o text-primary"></i>
+                                    <h3> Feeling spontaneous? </h3>
+                                    <p class="text-muted"> Choose an activity, or push Adventure! to be placed into a random category.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
+                                    <i class="fa fa-smile-o text-primary"></i>
                                     <h3>Matching</h3>
-                                    <p class="text-muted">Decide who you're going to travel with.</p>
+                                    <p class="text-muted">Find your perfect companion.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-sign-language text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Meet up and go on an adventure!</p>
+                                    <i class="fa fa-level-up text-primary"></i>
+                                    <h3>Have fun!</h3>
+                                    <p class="text-muted">Meet up and adventure!</p>
                                 </div>
                             </div>
                         </div>
@@ -198,10 +198,10 @@
             <h2>We <i class="fa fa-heart"></i> new friends!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/TravelMates"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
                     <a href="#"><i class="fa fa-instagram"></i></a>
