--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
                     <div class="badges">
                        <form action="https://formspree.io/foolsyries@gmail.com"
       method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
+    <input type="email" name="_replyto" placeholder="email" style="color:#000111">
+    <input type="submit" value="Sign Up" style="color:#000111; background-color:#55b4c6">
 </form>
                     </div>
                 </div>
