--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1> No road is long with good company. </h1>
+                            <h1> No place is strange with good company. </h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
                         </div>
                     </div>
