--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
             <h2>We <i class="fa fa-heart"></i> new friends!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href="twitter.com/travelmatesapp"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-facebook">
-                    <a href="https://www.facebook.com/TravelMates"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/TravelMatesSocial"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="http://www.instagram.com/travelmatessocial"><i class="fa fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
