slight changes to padding
asdf

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading"> Not all who wander are lost!</h2>
-                    <p> Find your next best friend! Sign up for our beta! </p>
+                    <h2 class="section-heading"> Not all who wander are lost.</h2>
+                    <p> Find your next best friend! Sign up for our beta. </p>
                     <div class="badges">
                        <form action="https://formspree.io/foolsyries@gmail.com"
       method="POST">
@@ -122,8 +122,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2> Choose an activity, get matched. </h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2> Hotels and hostels, made fun! </h2>
+                        <p class="text-muted"> Choose an activity - get matched. </p>
                         <hr>
                     </div>
                 </div>
